@@ -22,6 +22,7 @@ package org.monarchinitiative.exomiser.core.writers;
 
 import de.charite.compbio.jannovar.annotation.VariantEffect;
 import de.charite.compbio.jannovar.mendel.ModeOfInheritance;
+import htsjdk.samtools.util.BlockCompressedInputStream;
 import htsjdk.variant.vcf.VCFFileReader;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
@@ -34,20 +35,27 @@ import org.monarchinitiative.exomiser.core.filters.FilterResult;
 import org.monarchinitiative.exomiser.core.filters.FilterType;
 import org.monarchinitiative.exomiser.core.genome.TestFactory;
 import org.monarchinitiative.exomiser.core.genome.TestVariantFactory;
-import org.monarchinitiative.exomiser.core.genome.TestVcfReader;
 import org.monarchinitiative.exomiser.core.genome.VariantFactory;
 import org.monarchinitiative.exomiser.core.model.*;
+import org.monarchinitiative.exomiser.core.model.frequency.Frequency;
+import org.monarchinitiative.exomiser.core.model.frequency.FrequencyData;
+import org.monarchinitiative.exomiser.core.model.frequency.FrequencySource;
 import org.monarchinitiative.exomiser.core.model.pathogenicity.PathogenicityData;
+import org.monarchinitiative.exomiser.core.model.pathogenicity.PathogenicityScore;
+import org.monarchinitiative.exomiser.core.model.pathogenicity.PathogenicitySource;
 import org.monarchinitiative.exomiser.core.model.pathogenicity.PolyPhenScore;
 import org.monarchinitiative.exomiser.core.prioritisers.OmimPriorityResult;
 
+import java.io.BufferedReader;
+import java.io.FileInputStream;
 import java.io.IOException;
+import java.io.InputStreamReader;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.util.*;
+import java.util.stream.Collectors;
 
-import static java.util.stream.Collectors.toList;
 import static org.hamcrest.CoreMatchers.equalTo;
 import static org.hamcrest.MatcherAssert.assertThat;
 
@@ -62,31 +70,17 @@ import static org.hamcrest.MatcherAssert.assertThat;
  */
 public class VcfResultsWriterTest {
 
-    private final static String EXPECTED_HEADER = "##fileformat=VCFv4.2\n"
-            + "##FILTER=<ID=bed,Description=\"Gene panel target region (Bed)\">\n"
-            + "##FILTER=<ID=filter,Description=\"Failed previous VCF filters\">\n"
-            + "##FILTER=<ID=freq,Description=\"Frequency\">\n"
-            + "##FILTER=<ID=gene-id,Description=\"Gene id\">\n"
-            + "##FILTER=<ID=gene-priority,Description=\"Gene priority score\">\n"
-            + "##FILTER=<ID=inheritance,Description=\"Inheritance\">\n"
-            + "##FILTER=<ID=interval,Description=\"Interval\">\n"
-            + "##FILTER=<ID=known-var,Description=\"Known variant\">\n"
-            + "##FILTER=<ID=path,Description=\"Pathogenicity\">\n"
-            + "##FILTER=<ID=quality,Description=\"Quality\">\n"
-            + "##FILTER=<ID=reg-feat,Description=\"Regulatory feature\">\n"
-            + "##FILTER=<ID=var-effect,Description=\"Variant effect\">\n"
-            + "##INFO=<ID=ExContribAltAllele,Number=A,Type=Flag,Description=\"Exomiser alt allele id contributing to score\">\n"
-            + "##INFO=<ID=ExGeneSCombi,Number=A,Type=Float,Description=\"Exomiser gene combined score\">\n"
-            + "##INFO=<ID=ExGeneSPheno,Number=A,Type=Float,Description=\"Exomiser gene phenotype score\">\n"
-            + "##INFO=<ID=ExGeneSVar,Number=A,Type=Float,Description=\"Exomiser gene variant score\">\n"
-            + "##INFO=<ID=ExGeneSymbId,Number=A,Type=String,Description=\"Exomiser gene id\">\n"
-            + "##INFO=<ID=ExGeneSymbol,Number=A,Type=String,Description=\"Exomiser gene symbol\">\n"
-            + "##INFO=<ID=ExVarEff,Number=A,Type=String,Description=\"Exomiser variant effect\">\n"
-            + "##INFO=<ID=ExVarScore,Number=A,Type=Float,Description=\"Exomiser variant score\">\n"
-            + "##INFO=<ID=ExWarn,Number=A,Type=String,Description=\"Exomiser warning\">\n"
-            + "#CHROM\tPOS\tID\tREF\tALT\tQUAL\tFILTER\tINFO\tFORMAT\tsample\n";
-    private static final String CHR10_FGFR2_PASS_VARIANT = "10\t123256214\t.\tA\tG\t2.20\tPASS\tExGeneSCombi=0.0;ExGeneSPheno=0.0;ExGeneSVar=0.0;ExGeneSymbId=2263;ExGeneSymbol=FGFR2;ExVarEff=missense_variant;ExVarScore=0.89\tGT:RD\t0/1:30\n";
-    private static final String CHR10_FGFR2_CONTRIBUTING_VARIANT = "10\t123256215\t.\tT\tG\t2.20\tPASS\tExContribAltAllele=0;ExGeneSCombi=0.0;ExGeneSPheno=0.0;ExGeneSVar=0.0;ExGeneSymbId=2263;ExGeneSymbol=FGFR2;ExVarEff=missense_variant;ExVarScore=1.0\tGT:RD\t0/1:30\n";
+    private final static String METADATA_HEADER = "##fileformat=VCFv4.2\n" +
+                                                  "##INFO=<ID=Exomiser,Number=.,Type=String,Description=\"A pipe-separated set of values for the proband allele(s) from the record with one per compatible MOI following the format: {RANK|ID|GENE_SYMBOL|ENTREZ_GENE_ID|MOI|P-VALUE|EXOMISER_GENE_COMBINED_SCORE|EXOMISER_GENE_PHENO_SCORE|EXOMISER_GENE_VARIANT_SCORE|EXOMISER_VARIANT_SCORE|CONTRIBUTING_VARIANT|WHITELIST_VARIANT|FUNCTIONAL_CLASS|HGVS|EXOMISER_ACMG_CLASSIFICATION|EXOMISER_ACMG_EVIDENCE|EXOMISER_ACMG_DISEASE_ID|EXOMISER_ACMG_DISEASE_NAME}\">\n";
+
+    private static final String CHR_7_CONTIG_HEADER = "##contig=<ID=7,length=159138663,assembly=GRCh37.p13>\n";
+
+    private static final String CHR_10_CONTIG_HEADER = "##contig=<ID=10,length=135534747,assembly=GRCh37.p13>\n";
+
+    private static final String SAMPLE_HEADER = "#CHROM\tPOS\tID\tREF\tALT\tQUAL\tFILTER\tINFO\tFORMAT\tsample\n";
+
+    private static final String CHR10_FGFR2_PASS_VARIANT = "10\t123256214\t.\tA\tG\t2.20\tPASS\tExomiser={1|10-123256214-A-G_AD|FGFR2|2263|AD|1.0000|1.0000|0.0000|0.0000|0.8900|0|0|missense_variant|FGFR2:uc021pzz.1:c.1695G>C:p.(Glu565Asp)|NOT_AVAILABLE|||\"\"}\tGT:RD\t0/1:30\n";
+    private static final String CHR10_FGFR2_CONTRIBUTING_VARIANT = "10\t123256215\t.\tT\tG\t2.20\tPASS\tExomiser={1|10-123256215-T-G_AD|FGFR2|2263|AD|1.0000|1.0000|0.0000|0.0000|1.0000|1|0|missense_variant|FGFR2:uc021pzz.1:c.1694A>C:p.(Glu565Ala)|NOT_AVAILABLE|||\"\"}\tGT:RD\t0/1:30\n";
 
     private static final FilterResult PASS_TARGET_RESULT = FilterResult.pass(FilterType.VARIANT_EFFECT_FILTER);
     private static final FilterResult FAIL_TARGET_RESULT = FilterResult.fail(FilterType.VARIANT_EFFECT_FILTER);
@@ -115,8 +109,8 @@ public class VcfResultsWriterTest {
     private VariantEvaluation fgfr2ContributingVariant;
     private VariantEvaluation shhIndelVariant;
 
-    private Gene fgfr2Gene;
-    private Gene shhGene;
+    Gene fgfr2Gene = setUpFgfr2Gene();
+    Gene shhGene = setUpShhGene();
 
     @BeforeEach
     public void setUp() throws IOException {
@@ -128,22 +122,29 @@ public class VcfResultsWriterTest {
         setUpShhGene();
     }
 
-    private void setUpShhGene() {
+    private Gene setUpShhGene() {
+
         shhIndelVariant = TestVariantFactory.buildVariant(7, 155604800, "C", "CTT", SampleGenotype.het(), 30, 1.0);
 
-        shhGene = TestFactory.newGeneSHH();
+        Gene shhGene = TestFactory.newGeneSHH();
         shhGene.addVariant(shhIndelVariant);
         shhGene.addPriorityResult(new OmimPriorityResult(shhGene.getEntrezGeneID(), shhGene.getGeneSymbol(), 1f, Collections.emptyList(), Collections.emptyMap()));
+        return shhGene;
     }
 
-    private void setUpFgfr2Gene() {
+    private Gene setUpFgfr2Gene() {
         fgfr2PassMissenseVariant = TestVariantFactory.buildVariant(10, 123256214, "A", "G", SampleGenotype.het(), 30, 2.2);
         fgfr2PassMissenseVariant.setPathogenicityData(PathogenicityData.of(PolyPhenScore.of(0.89f)));
+        fgfr2PassMissenseVariant.contributesToGeneScoreUnderMode(ModeOfInheritance.ANY);
         fgfr2ContributingVariant = TestVariantFactory.buildVariant(10, 123256215, "T", "G", SampleGenotype.het(), 30, 2.2);
         fgfr2ContributingVariant.setPathogenicityData(PathogenicityData.of(PolyPhenScore.of(1f)));
-        fgfr2Gene = TestFactory.newGeneFGFR2();
+        fgfr2ContributingVariant.contributesToGeneScoreUnderMode(ModeOfInheritance.AUTOSOMAL_DOMINANT);
+        Gene fgfr2Gene = TestFactory.newGeneFGFR2();
         fgfr2Gene.addVariant(fgfr2PassMissenseVariant);
         fgfr2Gene.addPriorityResult(new OmimPriorityResult(fgfr2Gene.getEntrezGeneID(), fgfr2Gene.getGeneSymbol(), 1f, Collections.emptyList(), Collections.emptyMap()));
+        GeneScore geneScore = GeneScore.builder().combinedScore(1f).phenotypeScore(1f).variantScore(fgfr2ContributingVariant.getVariantScore()).geneIdentifier(fgfr2Gene.getGeneIdentifier()).contributingVariants(List.of(fgfr2ContributingVariant)).modeOfInheritance(ModeOfInheritance.AUTOSOMAL_DOMINANT).build();
+        fgfr2Gene.addGeneScore(geneScore);
+        return fgfr2Gene;
     }
 
     private AnalysisResults buildAnalysisResults(Sample sample, Analysis analysis, Gene... genes) {
@@ -161,44 +162,71 @@ public class VcfResultsWriterTest {
                 .sample(sample)
                 .analysis(analysis)
                 .build();
-        assertThat(instance.writeString(ModeOfInheritance.ANY, analysisResults, settings), equalTo(EXPECTED_HEADER));
+        assertThat(instance.writeString(analysisResults, settings), equalTo(METADATA_HEADER + SAMPLE_HEADER));
     }
 
-    /* test writing out unannotated variants */
-    @Test
-    public void testWriteUnannotatedVariants() {
-        TestVcfReader testVcfReader = TestVcfReader.forSamples("Sample");
-        VariantEvaluation unAnnotatedVariantEvaluation1 = TestFactory.variantBuilder(5, 11, "C", "T")
-                .variantContext(testVcfReader.readVariantContext("5 11 . C T 1 PASS . GT 0/1"))
+    private AnalysisResults buildAnalysisResults() {
+
+        VariantEvaluation fgfr2PassMissenseVariant = TestVariantFactory.buildVariant(10, 123256214, "A", "G", SampleGenotype.het(), 30, 2.2);
+        fgfr2PassMissenseVariant.addFilterResult(FilterResult.pass(FilterType.VARIANT_EFFECT_FILTER));
+        fgfr2PassMissenseVariant.setFrequencyData(FrequencyData.of(Frequency.of(FrequencySource.GNOMAD_G_AFR, 0.05f)));
+        fgfr2PassMissenseVariant.setCompatibleInheritanceModes(EnumSet.of(ModeOfInheritance.AUTOSOMAL_DOMINANT));
+
+        VariantEvaluation fgfr2ContributingVariant = TestVariantFactory.buildVariant(10, 123256215, "T", "G", SampleGenotype.het(), 30, 2.2);
+        fgfr2ContributingVariant.addFilterResult(FilterResult.pass(FilterType.VARIANT_EFFECT_FILTER));
+        fgfr2ContributingVariant.setPathogenicityData(PathogenicityData.of(PathogenicityScore.of(PathogenicitySource.REVEL, 0.95f)));
+        fgfr2ContributingVariant.setCompatibleInheritanceModes(EnumSet.of(ModeOfInheritance.AUTOSOMAL_DOMINANT));
+        fgfr2ContributingVariant.setContributesToGeneScoreUnderMode(ModeOfInheritance.AUTOSOMAL_DOMINANT);
+
+        Gene fgfr2Gene = TestFactory.newGeneFGFR2();
+        fgfr2Gene.addVariant(fgfr2PassMissenseVariant);
+        fgfr2Gene.addVariant(fgfr2ContributingVariant);
+        fgfr2Gene.addPriorityResult(new OmimPriorityResult(fgfr2Gene.getEntrezGeneID(), fgfr2Gene.getGeneSymbol(), 1f, Collections.emptyList(), Collections.emptyMap()));
+        GeneScore geneScore = GeneScore.builder()
+                .combinedScore(1f)
+                .phenotypeScore(1f)
+                .variantScore(fgfr2ContributingVariant.getVariantScore())
+                .geneIdentifier(fgfr2Gene.getGeneIdentifier())
+                .contributingVariants(List.of(fgfr2ContributingVariant))
+                .modeOfInheritance(ModeOfInheritance.AUTOSOMAL_DOMINANT)
                 .build();
-        VariantEvaluation unAnnotatedVariantEvaluation2 = TestFactory.variantBuilder(5, 14, "T", "TG")
-                .variantContext(testVcfReader.readVariantContext("5 14 . T TG 1 PASS . GT 0/1"))
+        fgfr2Gene.addGeneScore(geneScore);
+        fgfr2Gene.setCompatibleInheritanceModes(EnumSet.of(ModeOfInheritance.AUTOSOMAL_DOMINANT));
+
+        Gene shhGene = buildShhGene();
+
+        Sample sample = Sample.builder()
+                .vcfPath(Paths.get("src/test/resources/minimal.vcf"))
                 .build();
 
-        AnalysisResults analysisResults = AnalysisResults.builder()
+        return AnalysisResults.builder()
+                .genes(List.of(fgfr2Gene, shhGene))
                 .sample(sample)
-                .analysis(analysis)
-                .variantEvaluations(Arrays.asList(unAnnotatedVariantEvaluation1, unAnnotatedVariantEvaluation2))
                 .build();
+    }
 
-        String vcf = instance.writeString(ModeOfInheritance.ANY, analysisResults, settings);
-        final String expected = EXPECTED_HEADER
-                + "5\t11\t.\tC\tT\t1\t.\tExWarn=VARIANT_NOT_ANALYSED_NO_GENE_ANNOTATIONS\tGT\t0/1\n"
-                + "5\t14\t.\tT\tTG\t1\t.\tExWarn=VARIANT_NOT_ANALYSED_NO_GENE_ANNOTATIONS\tGT\t0/1\n";
-        assertThat(vcf, equalTo(expected));
+    private static Gene buildShhGene() {
+        Gene shhGene = TestFactory.newGeneSHH();
+        VariantEvaluation shhFailedVariant = TestVariantFactory.buildVariant(7, 155604800, "C", "CT", SampleGenotype.het(), 30, 1.0);
+        shhFailedVariant.addFilterResult(FilterResult.fail(FilterType.VARIANT_EFFECT_FILTER));
+        shhGene.addVariant(shhFailedVariant);
+        return shhGene;
     }
 
     /* test writing out annotated variants in two genes */
     @Test
     public void testWriteAnnotatedVariantsNoFiltersApplied() {
-        AnalysisResults analysisResults = buildAnalysisResults(sample, analysis, fgfr2Gene, shhGene);
-        fgfr2Gene.addVariant(fgfr2ContributingVariant);
 
-        String vcf = instance.writeString(ModeOfInheritance.ANY, analysisResults, settings);
-        final String expected = EXPECTED_HEADER
-                + "10\t123256214\t.\tA\tG\t2.20\t.\tExGeneSCombi=0.0;ExGeneSPheno=0.0;ExGeneSVar=0.0;ExGeneSymbId=2263;ExGeneSymbol=FGFR2;ExVarEff=missense_variant;ExVarScore=0.89\tGT:RD\t0/1:30\n"
-                + "10\t123256215\t.\tT\tG\t2.20\t.\tExGeneSCombi=0.0;ExGeneSPheno=0.0;ExGeneSVar=0.0;ExGeneSymbId=2263;ExGeneSymbol=FGFR2;ExVarEff=missense_variant;ExVarScore=1.0\tGT:RD\t0/1:30\n"
-                + "7\t155604800\t.\tC\tCTT\t1\t.\tExGeneSCombi=0.0;ExGeneSPheno=0.0;ExGeneSVar=0.0;ExGeneSymbId=6469;ExGeneSymbol=SHH;ExVarEff=frameshift_variant;ExVarScore=1.0\tGT:RD\t0/1:30\n";
+        AnalysisResults analysisResults = buildAnalysisResults();
+
+        String vcf = instance.writeString(analysisResults, settings);
+        final String expected = METADATA_HEADER
+                                + "##contig=<ID=7,length=159138663,assembly=GRCh37.p13>\n" +
+                                "##contig=<ID=10,length=135534747,assembly=GRCh37.p13>\n" +
+                                "#CHROM\tPOS\tID\tREF\tALT\tQUAL\tFILTER\tINFO\tFORMAT\tsample\n" +
+                                "7\t155604800\t.\tC\tCT\t1\tPASS\tExomiser={2|7-155604800-C-CT_ANY|SHH|6469|ANY|1.0000|0.0000|0.0000|0.0000|1.0000|0|0|frameshift_variant|SHH:uc003wmk.1:c.16dup:p.(Arg6Lysfs*58)|NOT_AVAILABLE|||\"\"}\tGT:RD\t0/1:30\n" +
+                                "10\t123256214\t.\tA\tG\t2.20\tPASS\tExomiser={1|10-123256214-A-G_AD|FGFR2|2263|AD|1.0000|1.0000|1.0000|0.9500|0.5958|0|0|missense_variant|FGFR2:uc021pzz.1:c.1695G>C:p.(Glu565Asp)|NOT_AVAILABLE|||\"\"}\tGT:RD\t0/1:30\n" +
+                                "10\t123256215\t.\tT\tG\t2.20\tPASS\tExomiser={1|10-123256215-T-G_AD|FGFR2|2263|AD|1.0000|1.0000|1.0000|0.9500|0.9500|1|0|missense_variant|FGFR2:uc021pzz.1:c.1694A>C:p.(Glu565Ala)|NOT_AVAILABLE|||\"\"}\tGT:RD\t0/1:30\n";
         assertThat(vcf, equalTo(expected));
     }
 
@@ -216,135 +244,46 @@ public class VcfResultsWriterTest {
                 .build();
 
         Gene gene = new Gene(incorrectGeneSymbol);
-        gene.addVariant(shhIndelVariant);
+        VariantEvaluation shhFailedVariant = TestVariantFactory.buildVariant(7, 155604800, "C", "CT", SampleGenotype.het(), 30, 1.0);
+        shhFailedVariant.addFilterResult(FilterResult.fail(FilterType.VARIANT_EFFECT_FILTER));
+        gene.addVariant(shhFailedVariant);
         gene.addPriorityResult(new OmimPriorityResult(gene.getEntrezGeneID(), gene.getGeneSymbol(), 1f, Collections.emptyList(), Collections.emptyMap()));
         gene.setCompatibleInheritanceModes(EnumSet.of(ModeOfInheritance.AUTOSOMAL_DOMINANT));
 
         AnalysisResults analysisResults = buildAnalysisResults(sample, analysis, gene);
 
-        String vcf = instance.writeString(ModeOfInheritance.AUTOSOMAL_DOMINANT, analysisResults, settings);
-        final String expected = EXPECTED_HEADER
-                + "7\t155604800\t.\tC\tCTT\t1\t.\tExGeneSCombi=0.0;ExGeneSPheno=0.0;ExGeneSVar=0.0;ExGeneSymbId=6469;ExGeneSymbol=SHH_alpha_spaces;ExVarEff=frameshift_variant;ExVarScore=1.0\tGT:RD\t0/1:30\n";
-        assertThat(vcf, equalTo(expected));
-    }
-
-    /* test writing out a variant PASSing all filters */
-    @Test
-    public void testWritePassVariants() {
-        fgfr2PassMissenseVariant.addFilterResult(PASS_TARGET_RESULT);
-        fgfr2PassMissenseVariant.setCompatibleInheritanceModes(EnumSet.of(ModeOfInheritance.AUTOSOMAL_DOMINANT));
-
-        fgfr2ContributingVariant.addFilterResult(PASS_TARGET_RESULT);
-        fgfr2ContributingVariant.setCompatibleInheritanceModes(EnumSet.of(ModeOfInheritance.AUTOSOMAL_DOMINANT));
-        fgfr2ContributingVariant.setContributesToGeneScoreUnderMode(ModeOfInheritance.AUTOSOMAL_DOMINANT);
-        GeneScore geneScore = GeneScore.builder()
-                .modeOfInheritance(ModeOfInheritance.AUTOSOMAL_DOMINANT)
-                .geneIdentifier(fgfr2Gene.getGeneIdentifier())
-                .contributingVariants(List.of(fgfr2ContributingVariant))
-                .build();
-
-        fgfr2Gene.addVariant(fgfr2ContributingVariant);
-        fgfr2Gene.addGeneScore(geneScore);
-        fgfr2Gene.setCompatibleInheritanceModes(EnumSet.of(ModeOfInheritance.AUTOSOMAL_DOMINANT));
-
-        AnalysisResults analysisResults = buildAnalysisResults(sample, analysis, fgfr2Gene);
-
-        String vcf = instance.writeString(ModeOfInheritance.AUTOSOMAL_DOMINANT, analysisResults, settings);
-        String expected = EXPECTED_HEADER + CHR10_FGFR2_PASS_VARIANT + CHR10_FGFR2_CONTRIBUTING_VARIANT;
+        String vcf = instance.writeString(analysisResults, settings);
+        final String expected = METADATA_HEADER + CHR_7_CONTIG_HEADER + SAMPLE_HEADER
+                + "7\t155604800\t.\tC\tCT\t1\tPASS\tExomiser={1|7-155604800-C-CT_ANY|SHH_alpha_spaces|6469|ANY|1.0000|0.0000|0.0000|0.0000|1.0000|0|0|frameshift_variant|SHH:uc003wmk.1:c.16dup:p.(Arg6Lysfs*58)|NOT_AVAILABLE|||\"\"}\tGT:RD\t0/1:30\n";
         assertThat(vcf, equalTo(expected));
     }
 
     @Test
     public void testWritePassVariantsToFile(@TempDir Path tempDir) throws IOException {
-        fgfr2PassMissenseVariant.addFilterResult(PASS_TARGET_RESULT);
-        fgfr2PassMissenseVariant.setCompatibleInheritanceModes(EnumSet.of(ModeOfInheritance.AUTOSOMAL_DOMINANT));
-
-        fgfr2ContributingVariant.addFilterResult(PASS_TARGET_RESULT);
-        fgfr2ContributingVariant.setCompatibleInheritanceModes(EnumSet.of(ModeOfInheritance.AUTOSOMAL_DOMINANT));
-        fgfr2ContributingVariant.setContributesToGeneScoreUnderMode(ModeOfInheritance.AUTOSOMAL_DOMINANT);
-        GeneScore geneScore = GeneScore.builder()
-                .modeOfInheritance(ModeOfInheritance.AUTOSOMAL_DOMINANT)
-                .geneIdentifier(fgfr2Gene.getGeneIdentifier())
-                .contributingVariants(List.of(fgfr2ContributingVariant))
-                .build();
-
-        fgfr2Gene.addVariant(fgfr2ContributingVariant);
-        fgfr2Gene.addGeneScore(geneScore);
-        fgfr2Gene.setCompatibleInheritanceModes(EnumSet.of(ModeOfInheritance.AUTOSOMAL_DOMINANT));
-
-        AnalysisResults analysisResults = buildAnalysisResults(sample, analysis, fgfr2Gene);
+        AnalysisResults analysisResults = buildAnalysisResults();
 
         Path vcfOutFilePrefix = tempDir.resolve("test-vcf-writer");
         OutputSettings outputSettings = OutputSettings.builder()
                 .outputFormats(EnumSet.of(OutputFormat.VCF))
                 .outputPrefix(vcfOutFilePrefix.toString())
                 .build();
-        instance.writeFile(ModeOfInheritance.AUTOSOMAL_DOMINANT, analysisResults, outputSettings);
+        instance.writeFile(analysisResults, outputSettings);
 
-        Path vcfOutFile = tempDir.resolve("test-vcf-writer_AD.vcf");
+        Path vcfOutFile = tempDir.resolve("test-vcf-writer.vcf.gz");
         assertThat(Files.exists(vcfOutFile), equalTo(true));
 
-        List<String> headerLines = Arrays.asList(EXPECTED_HEADER.split("\n"));
-        List<String> expected = new ArrayList<>(headerLines);
-        expected.add(CHR10_FGFR2_PASS_VARIANT.replace("\n", ""));
-        expected.add(CHR10_FGFR2_CONTRIBUTING_VARIANT.replace("\n", ""));
+        List<String> expected = new ArrayList<>(List.of(METADATA_HEADER.split("\n")));
+        expected.add(CHR_7_CONTIG_HEADER.trim());
+        expected.add(CHR_10_CONTIG_HEADER.trim());
+        expected.add(SAMPLE_HEADER.trim());
+        expected.add("7\t155604800\t.\tC\tCT\t1\tPASS\tExomiser={2|7-155604800-C-CT_ANY|SHH|6469|ANY|1.0000|0.0000|0.0000|0.0000|1.0000|0|0|frameshift_variant|SHH:uc003wmk.1:c.16dup:p.(Arg6Lysfs*58)|NOT_AVAILABLE|||\"\"}\tGT:RD\t0/1:30");
+        expected.add("10\t123256214\t.\tA\tG\t2.20\tPASS\tExomiser={1|10-123256214-A-G_AD|FGFR2|2263|AD|1.0000|1.0000|1.0000|0.9500|0.5958|0|0|missense_variant|FGFR2:uc021pzz.1:c.1695G>C:p.(Glu565Asp)|NOT_AVAILABLE|||\"\"}\tGT:RD\t0/1:30");
+        expected.add("10\t123256215\t.\tT\tG\t2.20\tPASS\tExomiser={1|10-123256215-T-G_AD|FGFR2|2263|AD|1.0000|1.0000|1.0000|0.9500|0.9500|1|0|missense_variant|FGFR2:uc021pzz.1:c.1694A>C:p.(Glu565Ala)|NOT_AVAILABLE|||\"\"}\tGT:RD\t0/1:30");
 
-        assertThat(Files.readAllLines(vcfOutFile), equalTo(expected));
-    }
-
-    /* test writing out a variant failing the target filter */
-    @Test
-    public void testWriteFailTargetVariant() {
-        EnumSet<ModeOfInheritance> autosomalDominantCompatible = EnumSet.of(ModeOfInheritance.AUTOSOMAL_DOMINANT);
-        fgfr2PassMissenseVariant.addFilterResult(FAIL_TARGET_RESULT);
-        fgfr2PassMissenseVariant.setCompatibleInheritanceModes(autosomalDominantCompatible);
-        fgfr2Gene.setCompatibleInheritanceModes(autosomalDominantCompatible);
-
-        AnalysisResults analysisResults = buildAnalysisResults(sample, analysis, fgfr2Gene);
-
-        String vcfAD = instance.writeString(ModeOfInheritance.AUTOSOMAL_DOMINANT, analysisResults, settings);
-        assertThat(vcfAD, equalTo(failedFgfr2VariantWithFilterField("var-effect")));
-
-        String vcfAR = instance.writeString(ModeOfInheritance.AUTOSOMAL_RECESSIVE, analysisResults, settings);
-        assertThat(vcfAR, equalTo(failedFgfr2VariantWithFilterField("inheritance;var-effect")));
-    }
-
-    private String failedFgfr2VariantWithFilterField(String filterFieldAD) {
-        return EXPECTED_HEADER
-                + "10\t123256214\t.\tA\tG\t2.20\t" + filterFieldAD + "\tExGeneSCombi=0.0;ExGeneSPheno=0.0;ExGeneSVar=0.0;ExGeneSymbId=2263;ExGeneSymbol=FGFR2;ExVarEff=missense_variant;ExVarScore=0.89\tGT:RD\t0/1:30\n";
-    }
-
-    @Test
-    public void testWriteContributingVariantsOnlyContainsOnlyContributingVariantLine() {
-
-        shhIndelVariant.addFilterResult(FAIL_TARGET_RESULT);
-        shhIndelVariant.setCompatibleInheritanceModes(EnumSet.of(ModeOfInheritance.AUTOSOMAL_DOMINANT));
-
-        fgfr2PassMissenseVariant.addFilterResult(PASS_TARGET_RESULT);
-        fgfr2PassMissenseVariant.setCompatibleInheritanceModes(EnumSet.of(ModeOfInheritance.AUTOSOMAL_DOMINANT));
-
-        fgfr2ContributingVariant.addFilterResult(PASS_TARGET_RESULT);
-        fgfr2ContributingVariant.setCompatibleInheritanceModes(EnumSet.of(ModeOfInheritance.AUTOSOMAL_DOMINANT));
-        fgfr2ContributingVariant.setContributesToGeneScoreUnderMode(ModeOfInheritance.AUTOSOMAL_DOMINANT);
-        GeneScore geneScore = GeneScore.builder()
-                .modeOfInheritance(ModeOfInheritance.AUTOSOMAL_DOMINANT)
-                .geneIdentifier(fgfr2Gene.getGeneIdentifier())
-                .contributingVariants(List.of(fgfr2ContributingVariant))
-                .build();
-
-        fgfr2Gene.addGeneScore(geneScore);
-        fgfr2Gene.setCompatibleInheritanceModes(EnumSet.of(ModeOfInheritance.AUTOSOMAL_DOMINANT));
-
-        AnalysisResults analysisResults = buildAnalysisResults(sample, analysis, fgfr2Gene, shhGene);
-
-        OutputSettings outputContributingVariantsOnly = OutputSettings.builder()
-                .outputFormats(EnumSet.of(OutputFormat.VCF))
-                .outputContributingVariantsOnly(true)
-                .build();
-
-        String output = instance.writeString(ModeOfInheritance.AUTOSOMAL_DOMINANT, analysisResults, outputContributingVariantsOnly);
-        String expected = EXPECTED_HEADER + CHR10_FGFR2_CONTRIBUTING_VARIANT;
-        assertThat(output, equalTo(expected));
+        try (BufferedReader br = new BufferedReader(new InputStreamReader(new BlockCompressedInputStream(new FileInputStream(vcfOutFile.toFile()))))) {
+            List<String> actual = br.lines().collect(Collectors.toUnmodifiableList());
+            assertThat(actual, equalTo(expected));
+        }
     }
 
     @Test
@@ -365,44 +304,30 @@ public class VcfResultsWriterTest {
                 .outputContributingVariantsOnly(true)
                 .build();
 
-        String output = instance.writeString(ModeOfInheritance.AUTOSOMAL_DOMINANT, analysisResults, outputPassVariantsOnlySettings);
-        assertThat(output, equalTo(EXPECTED_HEADER));
-    }
-    
-    @Test
-    public void testAlternativeAllelesAreWrittenOnSuccessiveLines() {
-        TestVariantFactory varFactory = new TestVariantFactory();
-        VariantEvaluation alt1 = TestVariantFactory.buildVariant(1, 120612040, "T", "TCCGCCG", SampleGenotype.het(), 30, 258.62);
-        VariantEvaluation alt2 = TestVariantFactory.buildVariant(1, 120612040, "T", "TCCTCCGCCG", SampleGenotype.homAlt(), 30, 258.62);
-        Gene gene = new Gene("TEST", 12345);
-        gene.addVariant(alt1);
-        gene.addVariant(alt2);
-        gene.setCompatibleInheritanceModes(EnumSet.of(ModeOfInheritance.AUTOSOMAL_DOMINANT));
-
-        AnalysisResults analysisResults = buildAnalysisResults(sample, analysis, gene);
-
-        String output = instance.writeString(ModeOfInheritance.AUTOSOMAL_DOMINANT, analysisResults, settings);
-        String expected = EXPECTED_HEADER
-                + "1\t120612040\t.\tT\tTCCGCCG\t258.62\t.\tExGeneSCombi=0.0;ExGeneSPheno=0.0;ExGeneSVar=0.0;ExGeneSymbId=12345;ExGeneSymbol=TEST;ExVarEff=intergenic_variant;ExVarScore=0.0\tGT:RD\t0/1:30\n"
-                + "1\t120612040\t.\tT\tTCCTCCGCCG\t258.62\t.\tExGeneSCombi=0.0;ExGeneSPheno=0.0;ExGeneSVar=0.0;ExGeneSymbId=12345;ExGeneSymbol=TEST;ExVarEff=intergenic_variant;ExVarScore=0.0\tGT:RD\t1/1:30\n";
-        assertThat(output, equalTo(expected));
+        String output = instance.writeString(analysisResults, outputPassVariantsOnlySettings);
+        assertThat(output, equalTo(METADATA_HEADER + SAMPLE_HEADER));
     }
 
     @Test
     public void testHomozygousAltAlleleOutputVcfContainsConcatenatedVariantScoresOnOneLine() {
         Path vcfPath = Paths.get("src/test/resources/multiAlleleGenotypes.vcf");
         VariantFactory variantFactory = TestFactory.buildDefaultVariantFactory(vcfPath);
-        List<VariantEvaluation> variants = variantFactory.createVariantEvaluations().collect(toList());
+        List<VariantEvaluation> variants = variantFactory.createVariantEvaluations().collect(Collectors.toUnmodifiableList());
         // 1/2 HETEROZYGOUS_ALT - needs to be written back out as a single line
         VariantEvaluation altAlleleOne = variants.get(3).toBuilder()
                 //change the variant effect from MISSENSE so that the score is different and the order can be tested on the output line
                 //variant score is 0.95 - contributes to score
                 .variantEffect(VariantEffect.FRAMESHIFT_VARIANT)
+                .filterResults(FilterResult.pass(FilterType.FREQUENCY_FILTER))
                 .contributingModes(EnumSet.of(ModeOfInheritance.AUTOSOMAL_DOMINANT))
+                .compatibleInheritanceModes(EnumSet.of(ModeOfInheritance.AUTOSOMAL_DOMINANT))
                 .build();
 
         //variant score is 0.6
         VariantEvaluation altAlleleTwo = variants.get(4);
+        altAlleleTwo.addFilterResult(FilterResult.pass(FilterType.FREQUENCY_FILTER));
+        altAlleleTwo.setContributesToGeneScoreUnderMode(ModeOfInheritance.AUTOSOMAL_DOMINANT);
+        altAlleleTwo.setCompatibleInheritanceModes(EnumSet.of(ModeOfInheritance.AUTOSOMAL_DOMINANT));
 
         Gene gene = new Gene(GeneIdentifier.builder()
                 .geneSymbol(altAlleleOne.getGeneSymbol())
@@ -412,12 +337,22 @@ public class VcfResultsWriterTest {
         gene.addVariant(altAlleleTwo);
         gene.setCompatibleInheritanceModes(EnumSet.of(ModeOfInheritance.AUTOSOMAL_DOMINANT));
 
+        GeneScore geneScore = GeneScore.builder()
+                .combinedScore(1d)
+                .modeOfInheritance(ModeOfInheritance.AUTOSOMAL_DOMINANT)
+                .geneIdentifier(gene.getGeneIdentifier())
+                .contributingVariants(List.of(altAlleleOne, altAlleleTwo))
+                .build();
+        gene.addGeneScore(geneScore);
+
         AnalysisResults analysisResults = buildAnalysisResults(sample, analysis, gene);
 
-        String output = instance.writeString(ModeOfInheritance.AUTOSOMAL_DOMINANT, analysisResults, settings);
-        //expected should have concatenated variant score for multi-allele line: ExVarSCombi=0.85,0.6
-        String expected = EXPECTED_HEADER
-                + "10\t123256215\t.\tT\tG,A\t100\t.\tExContribAltAllele=0;ExGeneSCombi=0.0;ExGeneSPheno=0.0;ExGeneSVar=0.0;ExGeneSymbId=2263;ExGeneSymbol=FGFR2;ExVarEff=frameshift_variant,missense_variant;ExVarScore=1.0,0.6;GENE=FGFR2;INHERITANCE=AD;MIM=101600\tGT\t1/2\n";
+        String output = instance.writeString(analysisResults, settings);
+        String expected = METADATA_HEADER + CHR_10_CONTIG_HEADER + SAMPLE_HEADER
+                + "10\t123256215\t.\tT\tG,A\t100\tPASS\tExomiser=" +
+                "{1|10-123256215-T-G_AD|FGFR2||AD|1.0000|1.0000|0.0000|0.0000|1.0000|1|0|frameshift_variant|FGFR2:uc021pzz.1:c.1694A>C:p.(Glu565Ala)|NOT_AVAILABLE|||\"\"}," +
+                "{1|10-123256215-T-A_AD|FGFR2||AD|1.0000|1.0000|0.0000|0.0000|0.6000|1|0|missense_variant|FGFR2:uc021pzz.1:c.1694A>T:p.(Glu565Val)|NOT_AVAILABLE|||\"\"};" +
+                "GENE=FGFR2;INHERITANCE=AD;MIM=101600\tGT\t1/2\n";
         assertThat(output, equalTo(expected));
     }
 }
